--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'AvertaStd-Bold';
+    font-family: 'AvertaStd-bold';
     font-size: 80px;
     line-height: 88px;
     box-sizing: border-box;
@@ -9,6 +9,22 @@
     /* Black */
 
     color: #2D2D2D;
+
+    /* H1 */
+
+    font-family: 'AvertaStd-Bold';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 80px;
+    line-height: 88px;
+
+    /* Body */
+
+    font-family: 'AvertaStd-Regular';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 28px;
 
 }
 
@@ -26,7 +42,7 @@ body{
 }
 
 .container{
-    padding: 8px 10%;
+    padding: 16px 10%;
 }
 
 nav{
@@ -37,13 +53,13 @@ nav{
 }
 
 .logo{
-    width: 160px;
+    width: 180px;
 }
 
 nav ul li{
     display: inline-block;
     list-style: none;
-    margin: 10px 10px;
+    margin: 16px 16px;
 }
 
 nav ul li a{
@@ -52,8 +68,83 @@ nav ul li a{
     font-size: small;
     position: relative;
 }
-
 nav ul li a::after{
+    content: '';
+    width: 0;
+    height: 3px;
+    background: #4E46B4;
+    position: absolute;
+    left: 0;
+    bottom: -8px;
+    transition: 0.5s;
+}
+nav ul li a:hover::after{
+    width: 100%;
+}
+.header-text{
+    margin-top: 10%;
+}
+.header-text h1{
+    margin-top: 24px;
+    margin-bottom: 24px;
+    font-family: 'AvertaStd-Bold';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 80px;
+    line-height: 88px;
+}
+.header-text h1 span{
+    color: #4E46B4;
+    font-family: 'AvertaStd-Bold';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 80px;
+    line-height: 88px;
+}
+
+/* ---------about--------- */
+
+#about{
+    padding: 80px 0;
+    color: #E0CFC2;
+}
+.row{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.about-col-1{
+    flex-basis: 35%;
+}
+.about-col-1 img{
+    width: 100%;
+    border-radius: 15px;
+}
+.about-col-2{
+    flex-basis: 56%;
+}
+.sub-title{
+    margin-top: 24px;
+    margin-bottom: 24px;
+    font-family: 'AvertaStd-Bold';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 60px;
+}
+
+.tab-titles{
+    display: flex;
+    margin: 40px 0 32px;
+}
+.tab-links{
+    margin-right: 48px;
+    font-family: 'AvertaStd-Bold';
+    font-size: medium;
+    cursor: pointer;
+    position: relative;
+}
+.tab-links::after{
     content: '';
     width: 0;
     height: 3px;
@@ -64,6 +155,22 @@ nav ul li a::after{
     transition: 0.5s;
 }
 
-nav ul li a:hover::after{
-    width: 100%;
+.tab-links.active-link::after{
+    width: 50%;
+}
+
+.tab-contents ul li{
+    list-style: none;
+    margin: 10px 0;
+    font-size: medium;
+}
+.tab-contents ul li span{
+    color: #4E46B4;
+    font-size: small;
+}
+.tab-contents{
+    display: none;
+}
+.tab-contents.active-tab{
+    display: block;
 }
