--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'AvertaStd-bold';
+    font-family: 'AvertaStd-Bold';
     font-size: 80px;
     line-height: 88px;
     box-sizing: border-box;
