--- a/style.css
+++ b/style.css
@@ -1,31 +1,8 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'AvertaStd-Bold';
-    font-size: 80px;
-    line-height: 88px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     box-sizing: border-box;
-
-    /* Black */
-
-    color: #2D2D2D;
-
-    /* H1 */
-
-    font-family: 'AvertaStd-Bold';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 80px;
-    line-height: 88px;
-
-    /* Body */
-
-    font-family: 'AvertaStd-Regular';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 28px;
-
 }
 
 body{
@@ -83,21 +60,23 @@ nav ul li a:hover::after{
 }
 .header-text{
     margin-top: 10%;
+    font-size: 18px;
+    line-height: 28px;
+}
+.header-text p{
+    margin-top: 10%;
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 600;
 }
 .header-text h1{
     margin-top: 24px;
     margin-bottom: 24px;
-    font-family: 'AvertaStd-Bold';
-    font-style: normal;
-    font-weight: 400;
     font-size: 80px;
     line-height: 88px;
 }
 .header-text h1 span{
     color: #4E46B4;
-    font-family: 'AvertaStd-Bold';
-    font-style: normal;
-    font-weight: 400;
     font-size: 80px;
     line-height: 88px;
 }
@@ -106,7 +85,7 @@ nav ul li a:hover::after{
 
 #about{
     padding: 80px 0;
-    color: #E0CFC2;
+    background-color: #f3f3f3;
 }
 .row{
     display: flex;
@@ -124,23 +103,26 @@ nav ul li a:hover::after{
     flex-basis: 56%;
 }
 .sub-title{
-    margin-top: 24px;
     margin-bottom: 24px;
-    font-family: 'AvertaStd-Bold';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 48px;
-    line-height: 60px;
+    font-weight: 600;
+    font-size: 56px;
+    line-height: 64px;
+}
+.about-col-2 p{
+    margin-top: 24px;
+    font-size: 18px;
+    line-height: 28px;
 }
 
 .tab-titles{
     display: flex;
-    margin: 40px 0 32px;
+    margin: 24px 0 32px;
 }
 .tab-links{
     margin-right: 48px;
-    font-family: 'AvertaStd-Bold';
-    font-size: medium;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 24px;
     cursor: pointer;
     position: relative;
 }
@@ -162,11 +144,14 @@ nav ul li a:hover::after{
 .tab-contents ul li{
     list-style: none;
     margin: 10px 0;
-    font-size: medium;
+    font-size: 16px;
+    line-height: 24px;
 }
 .tab-contents ul li span{
     color: #4E46B4;
-    font-size: small;
+    font-size: 12px;
+    line-height: 18px;
+    font-weight: 500;
 }
 .tab-contents{
     display: none;
@@ -174,3 +159,65 @@ nav ul li a:hover::after{
 .tab-contents.active-tab{
     display: block;
 }
+
+/* -----------services------------ */
+#services{
+    padding: 80px 0;
+}
+.services-list{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 48px;
+    margin-top: 48px;
+}
+.services-list div{
+    background: #F2E6FF;
+    padding: 32px;
+    font-size: 13px;
+    font-weight: 400;
+    border-radius: 10px;
+    transition: background 0.5s, transform 0.5s;
+}
+.services-list div i{
+    font-size: 48px;
+    margin-bottom: 16px;
+}
+.services-list div h2{
+    font-size: 32px;
+    font-weight: 700;
+    margin-bottom: 16px;
+}
+.services-list div a{
+    text-decoration: none;
+    color: #4E46B4;
+    font-size: 12px;
+    font-weight: 800;
+    margin-top: 16px;
+    display: inline-block;
+}
+.services-list div:hover{
+    transform: translateY(-10px);
+}
+
+/* ----------portfolio---------- */
+
+#portfolio{
+    padding: 80px 0;
+}
+.work-list{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(480px, 1fr));
+    grid-gap: 64px;
+    margin-top: 48px;
+}
+.work{
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+}
+.work img{
+    width: 100%;
+    border-radius: 10px;
+    display: block;
+}
+
