--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ nav ul li a:hover::after{
 }
 .header-text{
     margin-top: 10%;
+    margin-left: 5%;
     font-size: 18px;
     line-height: 28px;
 }
@@ -81,7 +82,7 @@ nav ul li a:hover::after{
     line-height: 88px;
 }
 
-/* ---------about--------- */
+/* --------------------------------about-------------------------------- */
 
 #about{
     padding: 80px 0;
@@ -97,7 +98,7 @@ nav ul li a:hover::after{
 }
 .about-col-1 img{
     width: 100%;
-    border-radius: 15px;
+    border-radius: 16px;
 }
 .about-col-2{
     flex-basis: 56%;
@@ -160,7 +161,8 @@ nav ul li a:hover::after{
     display: block;
 }
 
-/* -----------services------------ */
+/* --------------------------------services-------------------------------- */
+
 #services{
     padding: 80px 0;
 }
@@ -175,15 +177,15 @@ nav ul li a:hover::after{
     padding: 32px;
     font-size: 13px;
     font-weight: 400;
-    border-radius: 10px;
+    border-radius: 12px;
     transition: background 0.5s, transform 0.5s;
 }
 .services-list div i{
     font-size: 48px;
-    margin-bottom: 16px;
+    margin-bottom: 24px;
 }
 .services-list div h2{
-    font-size: 32px;
+    font-size: 28px;
     font-weight: 700;
     margin-bottom: 16px;
 }
@@ -199,7 +201,7 @@ nav ul li a:hover::after{
     transform: translateY(-10px);
 }
 
-/* ----------portfolio---------- */
+/* --------------------------------portfolio-------------------------------- */
 
 #portfolio{
     padding: 80px 0;
@@ -217,7 +219,49 @@ nav ul li a:hover::after{
 }
 .work img{
     width: 100%;
-    border-radius: 10px;
+    border-radius: 16px;
     display: block;
+    transition: transform 0.5s;
 }
-
+.layer{
+    width: 100%;
+    height: 0;
+    background: linear-gradient(rgba(0,0,0,0.2), #4E46B4);
+    border-radius: 16px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 40px;
+    text-align: center;
+    font-size: 13px;
+    color: #fff;
+    transition: height 0.5s;
+}
+.layer h3{
+    font-weight: 500;
+    margin-bottom: 24px;
+    color: #fff;
+}
+.layer a{
+    margin-top: 24px;
+    color: #4E46B4;
+    text-decoration: none;
+    font-size: 32px;
+    line-height: 66px;
+    background: #fff;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    text-align: center;
+}
+.work:hover img{
+    transform: scale(1.1);
+}
+.work:hover .layer{
+    height: 100%;
+}
