--- a/style.css
+++ b/style.css
@@ -213,7 +213,7 @@ nav ul li a:hover::after{
     margin-top: 48px;
 }
 .work{
-    border-radius: 10px;
+    border-radius: 16px;
     position: relative;
     overflow: hidden;
 }
@@ -236,7 +236,7 @@ nav ul li a:hover::after{
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    padding: 0 40px;
+    padding: 0 20px;
     text-align: center;
     font-size: 13px;
     color: #fff;
@@ -252,7 +252,7 @@ nav ul li a:hover::after{
     color: #4E46B4;
     text-decoration: none;
     font-size: 32px;
-    line-height: 66px;
+    line-height: 60px;
     background: #fff;
     width: 60px;
     height: 60px;
@@ -264,4 +264,21 @@ nav ul li a:hover::after{
 }
 .work:hover .layer{
     height: 100%;
+}
+.btn{
+    display: block;
+    margin: 64px auto;
+    width: fit-content;
+    border: 1px solid #4E46B4;
+    background: #4E46B4;
+    padding: 14px 48px;
+    border-radius: 24px;
+    text-decoration: none;
+    color: #fff;
+    transition: background 0.5s;
+}
+.btn:hover{
+    background: #fff;
+    border: 1px solid #4E46B4;
+    color: #4E46B4;
 }
