--- a/style.css
+++ b/style.css
@@ -1,20 +1,20 @@
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     box-sizing: border-box;
 }
 
-html{
+html {
     scroll-behavior: smooth;
 }
 
-body{
+body {
     background: #fff;
     color: #2D2D2D;
 }
 
-#header{
+#header {
     width: 100%;
     height: 100vh;
     background-image: url(images/background.png);
@@ -22,34 +22,36 @@ body{
     background-position: center;
 }
 
-.container{
+.container {
     padding: 16px 10%;
 }
 
-nav{
+nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
 }
 
-.logo{
+.logo {
     width: 180px;
 }
 
-nav ul li{
+nav ul li {
     display: inline-block;
     list-style: none;
     margin: 16px 16px;
 }
 
-nav ul li a{
+nav ul li a {
     color: #2D2D2D;
     text-decoration: none;
     font-size: small;
+    font-weight: bold;
     position: relative;
 }
-nav ul li a::after{
+
+nav ul li a::after {
     content: '';
     width: 0;
     height: 3px;
@@ -59,28 +61,33 @@ nav ul li a::after{
     bottom: -8px;
     transition: 0.5s;
 }
-nav ul li a:hover::after{
+
+nav ul li a:hover::after {
     width: 100%;
 }
-.header-text{
+
+.header-text {
     margin-top: 10%;
     margin-left: 5%;
     font-size: 18px;
     line-height: 28px;
 }
-.header-text p{
+
+.header-text p {
     margin-top: 10%;
     font-size: 18px;
     line-height: 24px;
     font-weight: 600;
 }
-.header-text h1{
+
+.header-text h1 {
     margin-top: 24px;
     margin-bottom: 24px;
     font-size: 80px;
     line-height: 88px;
 }
-.header-text h1 span{
+
+.header-text h1 span {
     color: #4E46B4;
     font-size: 80px;
     line-height: 88px;
@@ -88,42 +95,49 @@ nav ul li a:hover::after{
 
 /* --------------------------------about-------------------------------- */
 
-#about{
+#about {
     padding: 80px 0;
     background-color: #f3f3f3;
 }
-.row{
+
+.row {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
 }
-.about-col-1{
+
+.about-col-1 {
     flex-basis: 35%;
 }
-.about-col-1 img{
+
+.about-col-1 img {
     width: 100%;
     border-radius: 16px;
 }
-.about-col-2{
+
+.about-col-2 {
     flex-basis: 56%;
 }
-.sub-title{
+
+.sub-title {
     margin-bottom: 24px;
     font-weight: 600;
     font-size: 56px;
     line-height: 64px;
 }
-.about-col-2 p{
+
+.about-col-2 p {
     margin-top: 24px;
     font-size: 18px;
     line-height: 28px;
 }
 
-.tab-titles{
+.tab-titles {
     display: flex;
     margin: 24px 0 32px;
 }
-.tab-links{
+
+.tab-links {
     margin-right: 48px;
     font-weight: 500;
     font-size: 18px;
@@ -131,7 +145,8 @@ nav ul li a:hover::after{
     cursor: pointer;
     position: relative;
 }
-.tab-links::after{
+
+.tab-links::after {
     content: '';
     width: 0;
     height: 3px;
@@ -142,41 +157,46 @@ nav ul li a:hover::after{
     transition: 0.5s;
 }
 
-.tab-links.active-link::after{
+.tab-links.active-link::after {
     width: 50%;
 }
 
-.tab-contents ul li{
+.tab-contents ul li {
     list-style: none;
     margin: 10px 0;
     font-size: 16px;
     line-height: 24px;
 }
-.tab-contents ul li span{
+
+.tab-contents ul li span {
     color: #4E46B4;
     font-size: 12px;
     line-height: 18px;
     font-weight: 500;
 }
-.tab-contents{
+
+.tab-contents {
     display: none;
 }
-.tab-contents.active-tab{
+
+.tab-contents.active-tab {
     display: block;
 }
 
 /* --------------------------------services-------------------------------- */
 
-#services{
+#services {
     padding: 80px 0;
 }
-.services-list{
+
+.services-list {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 48px;
     margin-top: 48px;
 }
-.services-list div{
+
+.services-list div {
     background: #F2E6FF;
     padding: 32px;
     font-size: 13px;
@@ -184,16 +204,19 @@ nav ul li a:hover::after{
     border-radius: 12px;
     transition: background 0.5s, transform 0.5s;
 }
-.services-list div i{
+
+.services-list div i {
     font-size: 48px;
     margin-bottom: 24px;
 }
-.services-list div h2{
+
+.services-list div h2 {
     font-size: 28px;
     font-weight: 700;
     margin-bottom: 16px;
 }
-.services-list div a{
+
+.services-list div a {
     text-decoration: none;
     color: #4E46B4;
     font-size: 12px;
@@ -201,36 +224,41 @@ nav ul li a:hover::after{
     margin-top: 16px;
     display: inline-block;
 }
-.services-list div:hover{
+
+.services-list div:hover {
     transform: translateY(-10px);
 }
 
 /* --------------------------------portfolio-------------------------------- */
 
-#portfolio{
+#portfolio {
     padding: 80px 0;
 }
-.work-list{
+
+.work-list {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(480px, 1fr));
     grid-gap: 64px;
     margin-top: 48px;
 }
-.work{
+
+.work {
     border-radius: 16px;
     position: relative;
     overflow: hidden;
 }
-.work img{
+
+.work img {
     width: 100%;
     border-radius: 16px;
     display: block;
     transition: transform 0.5s;
 }
-.layer{
+
+.layer {
     width: 100%;
     height: 0;
-    background: linear-gradient(rgba(0,0,0,0.2), #4E46B4);
+    background: linear-gradient(rgba(0, 0, 0, 0.2), #4E46B4);
     border-radius: 16px;
     position: absolute;
     left: 0;
@@ -246,12 +274,14 @@ nav ul li a:hover::after{
     color: #fff;
     transition: height 0.5s;
 }
-.layer h3{
+
+.layer h3 {
     font-weight: 500;
     margin-bottom: 24px;
     color: #fff;
 }
-.layer a{
+
+.layer a {
     margin-top: 24px;
     color: #4E46B4;
     text-decoration: none;
@@ -263,13 +293,16 @@ nav ul li a:hover::after{
     border-radius: 50%;
     text-align: center;
 }
-.work:hover img{
+
+.work:hover img {
     transform: scale(1.1);
 }
-.work:hover .layer{
+
+.work:hover .layer {
     height: 100%;
 }
-.btn{
+
+.btn {
     display: block;
     margin: 64px auto;
     width: fit-content;
@@ -281,7 +314,8 @@ nav ul li a:hover::after{
     color: #fff;
     transition: background 0.5s;
 }
-.btn:hover{
+
+.btn:hover {
     background: #fff;
     border: 1px solid #4E46B4;
     color: #4E46B4;
@@ -289,25 +323,29 @@ nav ul li a:hover::after{
 
 /* --------------------------------contact-------------------------------- */
 
-.contact-left{
+.contact-left {
     flex-basis: 35%;
 }
 
-.contact-right{
+.contact-right {
     flex-basis: 50%;
 }
-.contact-left p{
+
+.contact-left p {
     margin: 24px;
 }
-.contact-left p i{
+
+.contact-left p i {
     color: #4E46B4;
     margin-right: 12px;
     font-size: 24px;
 }
-.social-icons{
+
+.social-icons {
     margin-top: 24px;
 }
-.social-icons a{
+
+.social-icons a {
     text-decoration: none;
     font-size: 24px;
     margin-right: 12px;
@@ -315,11 +353,13 @@ nav ul li a:hover::after{
     display: inline-block;
     transition: transform 0.5s;
 }
-.social-icons a:hover{
+
+.social-icons a:hover {
     color: #4E46B4;
     transform: translateY(-5px);
 }
-.btn.btn2{
+
+.btn.btn2 {
     display: inline-block;
     background: #4E46B4;
     font-size: 16px;
@@ -327,27 +367,30 @@ nav ul li a:hover::after{
     cursor: pointer;
 }
 
-.btn.btn2:hover{
+.btn.btn2:hover {
     background: #fff;
     border: 1px solid #4E46B4;
     color: #4E46B4;
 }
-.contact-right form{
+
+.contact-right form {
     width: 100%;
 }
-form input, form textarea{
+
+form input,
+form textarea {
     width: 100%;
     border: 0;
     outline: none;
     background: #f3f3f3;
     padding: 16px;
     margin: 12px 0;
-    color:#2D2D2D;
+    color: #2D2D2D;
     font-size: 18px;
     border-radius: 6px;
 }
 
-.copyright{
+.copyright {
     width: 100%;
     text-align: center;
     padding: 24px 0;
@@ -355,45 +398,52 @@ form input, form textarea{
     font-size: 12px;
     margin-top: 24px;
 }
-.copyright p{
+
+.copyright p {
     color: #fff;
 }
 
 /* --------------------------------css for small screens-------------------------------- */
 
-nav .fa-solid{
+nav .fa-solid {
     display: none;
 }
 
-@media only screen and (max-width: 600px){
-    #header{
+@media only screen and (max-width: 600px) {
+    #header {
         background-image: url(images/phone-background.png);
     }
-    .header-text{
+
+    .header-text {
         margin-top: 24px;
         font-size: 13px;
         text-align: center;
     }
-    .header-text p{
+
+    .header-text p {
         margin-top: 10%;
         font-size: 16px;
         text-align: center;
     }
-    .header-text h1{
+
+    .header-text h1 {
         font-size: 30px;
         line-height: 42px;
         text-align: center;
     }
-    .header-text h1 span{
+
+    .header-text h1 span {
         font-size: 30px;
         line-height: 48px;
         text-align: center;
     }
-    nav .fa-solid{
+
+    nav .fa-solid {
         display: block;
         font-size: 24px;
     }
-    nav ul{
+
+    nav ul {
         background: #4E46B4;
         position: fixed;
         top: 0;
@@ -404,48 +454,60 @@ nav .fa-solid{
         z-index: 2;
         transition: right 0.5s;
     }
-    nav ul li{
+
+    nav ul li {
         display: block;
         margin: 24px;
     }
-    nav ul li a{
+
+    nav ul li a {
         color: #fff;
     }
-    nav ul .fa-solid{
+
+    nav ul .fa-solid {
         position: absolute;
         top: 24px;
         left: 24px;
         cursor: pointer;
         color: #fff;
     }
-    .sub-title{
+
+    .sub-title {
         font-size: 24px;
     }
-    .about-col-1, .about-col-2{
+
+    .about-col-1,
+    .about-col-2 {
         flex-basis: 100%;
     }
-    .about-col-1{
+
+    .about-col-1 {
         margin-bottom: 24px;
     }
-    .about-col-2{
+
+    .about-col-2 {
         font-size: 13px;
     }
-    .tab-links{
+
+    .tab-links {
         font-size: 14px;
         margin-right: 24px;
     }
-    .work-list{
+
+    .work-list {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
         grid-gap: 48px;
         margin-top: 24px;
     }
-    .contact-left, .contact-right{
+
+    .contact-left,
+    .contact-right {
         flex-basis: 100%;
     }
 }
 
-#msg{
+#msg {
     color: #4E46B4;
     margin-top: -32px;
     display: block;
