--- a/style.css
+++ b/style.css
@@ -216,6 +216,11 @@ nav ul li a:hover::after {
     margin-bottom: 16px;
 }
 
+.services-list div p {
+    font-size: 16px;
+    line-height: 24px;
+}
+
 .services-list div a {
     text-decoration: none;
     color: #4E46B4;
